--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "google-auth-library": "^9.4.2"
+    "google-auth-library": "^9.4.2",
+    "jsonwebtoken": "^9.0.2",
+    "jwk-to-pem": "^2.0.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
