--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.18.2",
     "google-auth-library": "^9.4.2",
     "jsonwebtoken": "^9.0.2",
-    "jwk-to-pem": "^2.0.5"
+    "jwk-to-pem": "^2.0.5",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
