--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "google-auth-library": "^9.4.2",
     "jsonwebtoken": "^9.0.2",
     "jwk-to-pem": "^2.0.5",
